--- a/.github/workflows/marlin-build.yml
+++ b/.github/workflows/marlin-build.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   build_and_push:
     name: Compile and Push Firmware
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     env:
       BOARD: LPC1768
 
