--- a/.github/workflows/marlin-build.yml
+++ b/.github/workflows/marlin-build.yml
@@ -10,13 +10,13 @@ on:
 jobs:
   build_and_push:
     name: Compile and Push Firmware
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     env:
       BOARD: LPC1768
 
     steps:
       - name: Check out repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Compile firmware
         run: |
