--- a/.github/workflows/marlin-build.yml
+++ b/.github/workflows/marlin-build.yml
@@ -26,7 +26,7 @@ jobs:
             -e USE_TAG=2.1.2.2 \
             -v $(pwd)/Firmware/Builds:/home/platformio/build \
             -v $(pwd)/Firmware/Configuration:/home/platformio/CustomConfiguration \
-            sgngodin/braillerap-marlin-build:latest
+            ghcr.io/trivarialthea/marlin-build:latest
 
       - name: Push firmware
         run: |
