--- a/.github/workflows/marlin-build.yml
+++ b/.github/workflows/marlin-build.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - master
-    #paths:
-    #  - 'Firmware/Configuration/**.h'
+    paths:
+      - 'Firmware/Configuration/**.h'
 
 jobs:
   build_and_push:
